--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ p {
 
 a:link,
 a:visited {
-  color: #ffe600;
+  color: #3c3a29;
 }
 
 a:focus {
@@ -38,4 +38,16 @@ a:hover {
 
 a:active {
   color: black;
+}
+
+.button {
+  display: inline-block;
+  background-color: #ffe600;
+  color: black;
+  text-decoration: none;
+  padding: 15px 30px;
+}
+
+.button:hover {
+  background-color: chocolate;
 }
